--- a/package.yaml
+++ b/package.yaml
@@ -21,6 +21,11 @@ description:         Please see the README on GitHub at <https://github.com/gith
 
 dependencies:
 - base >= 4.7 && < 5
+- aeson
+- aeson-casing
+- bytestring
+- HTTP
+- network-uri
 
 library:
   source-dirs: src
