--- a/stack.yaml
+++ b/stack.yaml
@@ -39,7 +39,9 @@ packages:
 # - git: https://github.com/commercialhaskell/stack.git
 #   commit: e7b331f14bcffb8367cd58fbfc8b40ec7642100a
 #
-# extra-deps: []
+extra-deps:
+- req-2.1.0@sha256:ca64dfb2076e56f7a79e54e5e4a8ea36217769c7aa0b2d89cfc327cb4aa77abc,4751
+- retry-0.8.0.1@sha256:149393f74ce7504e171d71046936e58841ccfa0e59a37809824b6d68c04a36e5,2207
 
 # Override default flag values for local packages and extra-deps
 # flags: {}
